Add auto swagger documentation
